manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  selector:
    app: todo-ui
  ports:
  - port: 80
    targetPort: 80
