manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ing
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ui.cloudpunk.shop
    http:
      paths:
      - backend:
          service:
            name: ui-service
            port:
              number: 80
        path: "/"
        pathType: Prefix
